salesforce_sfdx/main/default/objects/Case/fields/OSFMX_AccountContract__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountContract__c</fullName>
    <formula>Account.OSFMX_AccountContractID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta-Contrato</label>
    <type>Text</type>
</CustomField>