salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ActualDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ActualDeliveryDate__c</fullName>
    <label>Fecha de entrega real</label>
    <type>Date</type>
</CustomField>