salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Amount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Amount__c</fullName>
    <formula>OSFMX_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>