salesforce_sfdx/main/default/objects/Case/fields/OSFMX_AssignedKAMId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AssignedKAMId__c</fullName>
    <label>Id KAM Asignado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>