salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Attachment__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archivo Adjunto</label>
    <type>Checkbox</type>
</CustomField>