salesforce_sfdx/main/default/objects/Case/fields/OSFMX_BillingLeaderConfirmsRevalidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BillingLeaderConfirmsRevalidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Líder Facturación confirma Revalidación</label>
    <type>Checkbox</type>
</CustomField>