salesforce_sfdx/main/default/objects/Case/fields/OSFMX_BillingLeaderConfirmsValidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BillingLeaderConfirmsValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Líder Facturación confirma validación</label>
    <type>Checkbox</type>
</CustomField>