salesforce_sfdx/main/default/objects/Case/fields/OSFMX_BillingSpecialistId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BillingSpecialistId__c</fullName>
    <label>Id especialista facturación</label>
    <length>18</length>
    <type>Text</type>
</CustomField>