salesforce_sfdx/main/default/objects/Case/fields/OSFMX_BPInterlocutor__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BPInterlocutor__c</fullName>
    <formula>Account.OSFMX_Interlocutor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP / Interlocutor</label>
    <type>Text</type>
</CustomField>