salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CaseCreatedGreaterthanOrEqualThree__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CaseCreatedGreaterthanOrEqualThree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fecha de caso creado mayor o igual a 3</label>
    <type>Checkbox</type>
</CustomField>