salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CaseOwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CaseOwnerPhone__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <label>Teléfono Propietario del Caso</label>
    <type>Text</type>
</CustomField>