salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CasoCreado__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CasoCreado__c</fullName>
    <label>Fecha caso creado</label>
    <type>Date</type>
</CustomField>