salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ClosingforCreditConfirmation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ClosingforCreditConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirma validación cierre por crédito</label>
    <type>Checkbox</type>
</CustomField>