salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CollectionConfirmation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CollectionConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación de Validación Cobranza</label>
    <type>Checkbox</type>
</CustomField>