salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CollectionConfirmedRevalidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CollectionConfirmedRevalidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidación confirmada por Cobranza</label>
    <type>Checkbox</type>
</CustomField>