salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CommittedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CommittedDeliveryDate__c</fullName>
    <label>Fecha de entrega comprometida</label>
    <type>Date</type>
</CustomField>