salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CommitteeConfirmation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CommitteeConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación validación de comité</label>
    <type>Checkbox</type>
</CustomField>