salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Consumption_period__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Consumption_period__c</fullName>
    <label>Periodo de Consumo</label>
    <type>Date</type>
</CustomField>