salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ConsumptionDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ConsumptionDate__c</fullName>
    <label>Fecha de consumo</label>
    <type>Date</type>
</CustomField>