salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContactTitle__c</fullName>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo del contacto</label>
    <type>Text</type>
</CustomField>