salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Contract__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>