salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreatedDate__c</fullName>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>