salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreatedSameMonth__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreatedSameMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado mismo mes 1 ó 2</label>
    <type>Checkbox</type>
</CustomField>