salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreditAssigned__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreditAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crédito ya asignado</label>
    <type>Checkbox</type>
</CustomField>