salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreditCaseAssigned__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreditCaseAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caso de crédito ya asignado</label>
    <type>Checkbox</type>
</CustomField>