salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreditCaseClosingRevalidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreditCaseClosingRevalidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidación de cierre caso de crédito</label>
    <type>Checkbox</type>
</CustomField>