salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreditClosureValidation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreditClosureValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación cierre por crédito</label>
    <type>Checkbox</type>
</CustomField>