salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CreditComments__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CreditComments__c</fullName>
    <label>Comentarios de Crédito y Riesgo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>