salesforce_sfdx/main/default/objects/Case/fields/OSFMX_CurrentStatusDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CurrentStatusDate__c</fullName>
    <label>Fecha de inicio del estado actual</label>
    <type>Date</type>
</CustomField>