salesforce_sfdx/main/default/objects/Case/fields/OSFMX_DateofChangetoGreen__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DateofChangetoGreen__c</fullName>
    <label>Fecha de cambio a semáforo verde</label>
    <type>Date</type>
</CustomField>