salesforce_sfdx/main/default/objects/Case/fields/OSFMX_DateofChangetoRed__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DateofChangetoRed__c</fullName>
    <label>Fecha de cambio a semáforo rojo</label>
    <type>Date</type>
</CustomField>