salesforce_sfdx/main/default/objects/Case/fields/OSFMX_DateofChangetoYellow__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DateofChangetoYellow__c</fullName>
    <label>Fecha de cambio a semáforo amarillo</label>
    <type>Date</type>
</CustomField>