salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Dealer__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Dealer__c</fullName>
    <formula>Text(
OSFMX_Opportunity__r.OSFMX_Dealer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribuidor</label>
    <type>Text</type>
</CustomField>