salesforce_sfdx/main/default/objects/Case/fields/OSFMX_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DocumentType__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>