salesforce_sfdx/main/default/objects/Case/fields/OSFMX_EndDateAssignation__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EndDateAssignation__c</fullName>
    <formula>IF( OSFMX_Weekday__c =&apos;SÁBADO&apos;,OSFMX_NextCreditandRiskAssignment__c  - 1,
IF(OSFMX_Weekday__c =&apos;DOMINGO&apos;,OSFMX_NextCreditandRiskAssignment__c  - 2, OSFMX_NextCreditandRiskAssignment__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Esta fecha evalúa que la asignación sea un día hábil.</inlineHelpText>
    <label>Fecha de asignación final - crédito</label>
    <type>Date</type>
</CustomField>