salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ErrorDescription__c</fullName>
    <label>Descripción del error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>