salesforce_sfdx/main/default/objects/Case/fields/OSFMX_EstimatedAnnualConsumption__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EstimatedAnnualConsumption__c</fullName>
    <formula>OSFMX_Opportunity__r.OSFMX_Expectedannualconsumption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo anual esperado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>