salesforce_sfdx/main/default/objects/Case/fields/OSFMX_FieldtoCorrect__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FieldtoCorrect__c</fullName>
    <label>Campo a corregir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>