salesforce_sfdx/main/default/objects/Case/fields/OSFMX_GuaranteeAmount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GuaranteeAmount__c</fullName>
    <label>Monto de garantía</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>