salesforce_sfdx/main/default/objects/Case/fields/OSFMX_IncidenceType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IncidenceType__c</fullName>
    <label>Tipo de Incidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error de datos facturación</fullName>
            </value>
            <value>
                <fullName>Factura no recibida por el cliente</fullName>
            </value>
            <value>
                <fullName>Incumplimiento en la fecha de entrega</fullName>
            </value>
            <value>
                <fullName>Cambio a solicitud de cliente (sin error)</fullName>
            </value>
            <value>
                <fullName>Pendiente complemento de pago</fullName>
            </value>
            <value>
                <fullName>Complemento de pago erróneo</fullName>
            </value>
            <value>
                <fullName>Datos de pago erróneo o incompleto en factura CIE</fullName>
            </value>
            <value>
                <fullName>Datos de pago erróneo o incompleto en factura Referencia</fullName>
            </value>
            <value>
                <fullName>No identificado</fullName>
            </value>
            <value>
                <fullName>Solicitud de condiciones especiales</fullName>
            </value>
            <value>
                <fullName>Inexistencia de garantía</fullName>
            </value>
            <value>
                <fullName>Entrega de Garantía</fullName>
            </value>
            <value>
                <fullName>Solicitud de EEFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>