salesforce_sfdx/main/default/objects/Case/fields/OSFMX_IncidentSubtype__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IncidentSubtype__c</fullName>
    <label>Subtipo de incidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ampliación de crédito</fullName>
            </value>
            <value>
                <fullName>Exención de garantía (anual)</fullName>
            </value>
            <value>
                <fullName>Exención de garantía (por contrato)</fullName>
            </value>
            <value>
                <fullName>Garantía como obligado solidario</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Primer contrato</fullName>
            </value>
            <value>
                <fullName>Reducción de garantía</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>