salesforce_sfdx/main/default/objects/Case/fields/OSFMX_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InvoiceNumber__c</fullName>
    <label>Número de factura</label>
    <length>30</length>
    <type>Text</type>
</CustomField>