salesforce_sfdx/main/default/objects/Case/fields/OSFMX_KAMCreditRegistrationValidate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_KAMCreditRegistrationValidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación KAM valida alta crédito</label>
    <type>Checkbox</type>
</CustomField>