salesforce_sfdx/main/default/objects/Case/fields/OSFMX_KAMOwner__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_KAMOwner__c</fullName>
    <formula>OSFMX_Opportunity__r.Owner.FirstName &amp;&apos; &apos;&amp; OSFMX_Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario KAM</label>
    <type>Text</type>
</CustomField>