salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Light__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Light__c</fullName>
    <label>Semáforo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>