salesforce_sfdx/main/default/objects/Case/fields/OSFMX_manageremail__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_manageremail__c</fullName>
    <label>Correo Gerente B2B</label>
    <type>Email</type>
</CustomField>