salesforce_sfdx/main/default/objects/Case/fields/OSFMX_MonthAssigned__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MonthAssigned__c</fullName>
    <formula>CASE(
MONTH( OSFMX_EndDateAssignation__c ),
1, &quot;Enero&quot;,
2, &quot;Febrero&quot;,
3, &quot;Marzo&quot;,
4, &quot;Abril&quot;,
5, &quot;Mayo&quot;,
6, &quot;Junio&quot;,
7, &quot;Julio&quot;,
8, &quot;Agosto&quot;,
9, &quot;Setiembre&quot;,
10, &quot;Octubre&quot;,
11, &quot;Noviembre&quot;,
&quot;Diciembre&quot;
) &amp; &apos;, &apos; &amp; TEXT(YEAR(OSFMX_EndDateAssignation__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes asignado a crédito</label>
    <type>Text</type>
</CustomField>