salesforce_sfdx/main/default/objects/Case/fields/OSFMX_MonthConsumptionPeriod__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MonthConsumptionPeriod__c</fullName>
    <label>Mes del periodo de consumo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENERO</fullName>
            </value>
            <value>
                <fullName>FEBRERO</fullName>
            </value>
            <value>
                <fullName>MARZO</fullName>
            </value>
            <value>
                <fullName>ABRIL</fullName>
            </value>
            <value>
                <fullName>MAYO</fullName>
            </value>
            <value>
                <fullName>JUNIO</fullName>
            </value>
            <value>
                <fullName>JULIO</fullName>
            </value>
            <value>
                <fullName>AGOSTO</fullName>
            </value>
            <value>
                <fullName>SEPTIEMBRE</fullName>
            </value>
            <value>
                <fullName>OCTUBRE</fullName>
            </value>
            <value>
                <fullName>NOVIEMBRE</fullName>
            </value>
            <value>
                <fullName>DICIEMBRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>