salesforce_sfdx/main/default/objects/Case/fields/OSFMX_motivoForContact__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_motivoForContact__c</fullName>
    <description>Este campo se utiliza para mapearlo en la plantilla caso 48hr</description>
    <label>Motivo del contacto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>