salesforce_sfdx/main/default/objects/Case/fields/OSFMX_MustSay__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MustSay__c</fullName>
    <label>Debe decir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>