salesforce_sfdx/main/default/objects/Case/fields/OSFMX_NextCreditandRiskAssignment__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NextCreditandRiskAssignment__c</fullName>
    <label>Próxima asignación Crédito y Riesgo</label>
    <type>Date</type>
</CustomField>