salesforce_sfdx/main/default/objects/Case/fields/OSFMX_NombreGerenteB2B__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NombreGerenteB2B__c</fullName>
    <formula>Owner:User.Manager.FirstName  &amp; &quot; &quot; &amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Gerente B2B</label>
    <type>Text</type>
</CustomField>