salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CasosMX</relationshipLabel>
    <relationshipName>CasosMX</relationshipName>
    <type>Lookup</type>
</CustomField>