salesforce_sfdx/main/default/objects/Case/fields/OSFMX_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OwnerID__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de propietario</label>
    <type>Text</type>
</CustomField>