salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PaymentAmount__c</fullName>
    <label>Monto de pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>