salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PaymentComplementNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PaymentComplementNumber__c</fullName>
    <label>Número de complemento de pago</label>
    <length>30</length>
    <type>Text</type>
</CustomField>