salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PaymentDate__c</fullName>
    <label>Fecha de pago</label>
    <type>Date</type>
</CustomField>