salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PaymentVoucher__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PaymentVoucher__c</fullName>
    <label>Comprobante de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>