salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PortalMessage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PortalMessage__c</fullName>
    <formula>"Portal"  &amp; "-" &amp;  CaseNumber  &amp; "-" &amp;  CreatedBy.FirstName  &amp; " " &amp;  CreatedBy.LastName</formula>
    <label>.</label>
    <type>Text</type>
</CustomField>