salesforce_sfdx/main/default/objects/Case/fields/OSFMX_PreviousUser__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PreviousUser__c</fullName>
    <formula>IF(TEXT(Status)=&apos;Validación por Cobranza&apos;,CASESAFEID(LastModifiedBy.Id),CASESAFEID(OwnerId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuario Anterior Id</label>
    <type>Text</type>
</CustomField>