salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ReasonForContact__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReasonForContact__c</fullName>
    <label>Motivo del contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitud de servicio</fullName>
            </value>
            <value>
                <fullName>Conexión del servicio</fullName>
            </value>
            <value>
                <fullName>Fallas en el servicio</fullName>
            </value>
            <value>
                <fullName>Conceptos erróneos en la factura</fullName>
            </value>
            <value>
                <fullName>Montos erróneos en la factura</fullName>
            </value>
            <value>
                <fullName>Retrasos en la entrega de facturas</fullName>
            </value>
            <value>
                <fullName>Complemento de pago</fullName>
            </value>
            <value>
                <fullName>Problemas con el portal Mi Cuenta B2B</fullName>
            </value>
            <value>
                <fullName>Sugerencias</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>