salesforce_sfdx/main/default/objects/Case/fields/OSFMX_ReasontoRevalidate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReasontoRevalidate__c</fullName>
    <label>Razón para revalidar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>