salesforce_sfdx/main/default/objects/Case/fields/OSFMX_RegistratonforCreditValidate__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RegistratonforCreditValidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación validación alta por crédito</label>
    <type>Checkbox</type>
</CustomField>