salesforce_sfdx/main/default/objects/Case/fields/OSFMX_RevalidationRequestedbyCommitte__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RevalidationRequestedbyCommitte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidación solicitada por comité</label>
    <type>Checkbox</type>
</CustomField>