salesforce_sfdx/main/default/objects/Case/fields/OSFMX_RevalidationRequestedbyCredit__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RevalidationRequestedbyCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revalidación solicitada por crédito</label>
    <type>Checkbox</type>
</CustomField>