salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Say__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Say__c</fullName>
    <label>Dice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>