salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Society__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Society__c</fullName>
    <formula>Text( 
OSFMX_Opportunity__r.OSFMX_EngieSupplier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sociedad</label>
    <type>Text</type>
</CustomField>