salesforce_sfdx/main/default/objects/Case/fields/OSFMX_StatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_StatusIndicator__c</fullName>
    <formula>IMAGE(
CASE(OSFMX_Light__c,
&quot;Verde&quot;, &quot;/resource/1508192030000/GraphicsPackNew/fatcow/farmfresh/32/flag_green.png&quot;,
&quot;Amarillo&quot;, &quot;/resource/1508192030000/GraphicsPackNew/fatcow/farmfresh/32/flag_yellow.png&quot;,
&quot;Rojo&quot;, &quot;/resource/1508192030000/GraphicsPackNew/fatcow/farmfresh/32/flag_red.png&quot;,
&quot;/s.gif&quot;),
&quot;Traffic light&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador de Estado</label>
    <type>Text</type>
</CustomField>