salesforce_sfdx/main/default/objects/Case/fields/OSFMX_Weekday__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Weekday__c</fullName>
    <formula>CASE(
MOD( OSFMX_NextCreditandRiskAssignment__c - DATE( 1900, 1, 7 ), 7 ),
0, &quot;DOMINGO&quot;,
1, &quot;LUNES&quot;,
2, &quot;MARTES&quot;,
3, &quot;MIÉRCOLES&quot;,
4, &quot;JUEVES&quot;,
5, &quot;VIERNES&quot;,
&quot;SÁBADO&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de la semana</label>
    <type>Text</type>
</CustomField>