salesforce_sfdx/main/default/objects/Case/fields/OSFPE_fld_correoFOSS__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_correoFOSS__c</fullName>
    <label>Correo del FOSS</label>
    <type>Email</type>
</CustomField>