salesforce_sfdx/main/default/objects/Case/fields/OSFPE_fld_detalle_solucion_caso__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_detalle_solucion_caso__c</fullName>
    <inlineHelpText>Luego de cerrar el caso, indique cuál fue la solución del caso, puede adjuntar el correo y conformidad del cliente.</inlineHelpText>
    <label>Detalle de la solución del caso</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>