salesforce_sfdx/main/default/objects/Case/fields/OSFPE_fld_FOSS__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_FOSS__c</fullName>
    <formula>Account.OSFPE_fld_FOSS_EEP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOSS</label>
    <type>Text</type>
</CustomField>