salesforce_sfdx/main/default/objects/Case/fields/OSFPE_fld_puntoSuministro__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_puntoSuministro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de Suministro</label>
    <referenceTo>Punto_de_suministro__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>