salesforce_sfdx/main/default/objects/Case/fields/Validaci_n_de_Cierre_por_KAM__c.field-meta.xml
<CustomField>
    <fullName>Validaci_n_de_Cierre_por_KAM__c</fullName>
    <label>Validación de Cierre por KAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-Validación necesaria de Facturación - Devolver a Facturación</fullName>
            </value>
            <value>
                <fullName>Confirmación de KAM de Cierre Satisfactorio del caso</fullName>
            </value>
            <value>
                <fullName>Re-Validación necesaria de Cobranza - Devolver a Cobranza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>