salesforce_sfdx/main/default/objects/Case/recordTypes/Cr_dito_y_Riesgo_1_y_3.recordType-meta.xml
<RecordType>
    <fullName>Cr_dito_y_Riesgo_1_y_3</fullName>
    <active>true</active>
    <businessProcess>Crédito y Riesgo - INC 1 y 3</businessProcess>
    <label>Crédito y Riesgo (1 y 3)</label>
</RecordType>