salesforce_sfdx/main/default/objects/Case/recordTypes/Cr_dito_y_Riesgo_2_y_4.recordType-meta.xml
<RecordType>
    <fullName>Cr_dito_y_Riesgo_2_y_4</fullName>
    <active>true</active>
    <businessProcess>Crédito y Riesgo - INC 2 y 4</businessProcess>
    <label>Crédito y Riesgo (2 y 4)</label>
</RecordType>