salesforce_sfdx/main/default/objects/Case/recordTypes/OSFMX_Accounting.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Accounting</fullName>
    <active>true</active>
    <businessProcess>Cobranza</businessProcess>
    <description>Tipo de registro para casos de cobranza</description>
    <label>Cobranza</label>
</RecordType>