salesforce_sfdx/main/default/objects/Case/recordTypes/OSFMX_Billing.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Billing</fullName>
    <active>true</active>
    <businessProcess>Facturación</businessProcess>
    <label>Facturación</label>
</RecordType>