salesforce_sfdx/main/default/objects/Case/recordTypes/OSFMX_Cobranza.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_Cobranza</fullName>
    <active>true</active>
    <businessProcess>Creación de casos</businessProcess>
    <label>Creación Caso de Cobranza</label>
</RecordType>