salesforce_sfdx/main/default/objects/Case/recordTypes/OSFMX_CreditAndAccounting.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_CreditAndAccounting</fullName>
    <active>true</active>
    <businessProcess>Creación de casos</businessProcess>
    <label>Creación Caso de Crédito y Riesgo</label>
</RecordType>