salesforce_sfdx/main/default/objects/Case/recordTypes/OSFMX_InvoiceCase.recordType-meta.xml
<RecordType>
    <fullName>OSFMX_InvoiceCase</fullName>
    <active>true</active>
    <businessProcess>Creación de casos</businessProcess>
    <label>Creación Caso de Facturación</label>
</RecordType>