salesforce_sfdx/main/default/objects/Case/recordTypes/OSFPE_rt_Caso.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Caso</fullName>
    <active>true</active>
    <businessProcess>OSFPE_sp_Caso</businessProcess>
    <label>Caso Perú</label>
</RecordType>