salesforce_sfdx/main/default/objects/Case/recordTypes/PortalB2B.recordType-meta.xml
<RecordType>
    <fullName>PortalB2B</fullName>
    <active>true</active>
    <businessProcess>Portal de clientes</businessProcess>
    <label>Portal B2B</label>
</RecordType>