salesforce_sfdx/main/default/objects/Case/listViews/OSFMX_BillingCases.listView-meta.xml
<ListView>
    <fullName>OSFMX_BillingCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>OSFMX_Opportunity__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>OSFMX_Society__c</columns>
    <columns>OSFMX_IncidenceType__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>Todos los casos de facturación</label>
</ListView>